--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="no_of_teams">Teams</string>
     <string name="p_to_sort">People to Sort</string>
     <string name="team_names_label">Team names:</string>
+    <string name="team_name_label">Team name:</string>
+    <string name="team">Team</string>
+    <string name="save_button">Save</string>
+
+
 </resources>
